<resources>
    <string name="app_name">Picturization</string>

    <string name="date_format">dd/MM/yyyy HH:mm</string>
    <string name="btn_close">Close</string>

    <!-- Menu -->
    <string name="title_home">Home</string>

    <!-- Filter Name -->
    <string name="gaussian_blur">Gaussian Blur</string>
    <string name="radial_blur">Radial Blur</string>
    <string name="color_inversion">Color Inversion</string>
    <string name="zoom">Zoom</string>
    <string name="compression">Compression</string>
    <string name="grayscale">Grayscale</string>
    <string name="bichromatic">Bichromatic</string>
    <string name="ascii_image_conversion">ASCII Conversion</string>

    <!-- Param Filter Name -->
    <string name="intensity">Intensity</string>
    <string name="orientation">Orientation</string>
    <string name="size">Size</string>
    <string name="color_filter_1">Color 1</string>
    <string name="color_filter_2">Color 2</string>
    <string name="colored_chars">Colored Chars</string>
    <string name="quality_reduction">Quality Reduction</string>

    <!-- Start Fragment -->
    <string name="txt_fab_take_picture">Take a Picture</string>
    <string name="txt_fab_gallery">Pick from Gallery</string>
    <string name="error_open_picture">An error occur with the picture</string>
    <string name="txt_empty_list">No Image sent to the server</string>

    <!-- TranformPicture Fragment -->
    <string name="title_transform_fragment">Transform</string>
    <string name="menu_filter">Filters</string>
    <string name="menu_filter_list">Filters List</string>
    <string name="btn_send_picture">Send Picture</string>
    <string name="title_dialog_filter_added">Filter Confirmation</string>
    <string name="title_dialog_empty_filter">Filter Empty</string>
    <string name="message_dialog_empty_filter">Can\'t send image because there is no filter</string>
    <string name="message_dialog_filter_added">The %s has been added</string>
    <string name="message_success_send">The Image was successfully sent</string>
    <string name="btn_add_filter">Add</string>
    <string name="title_dialog_empty_checkbox">No Orientation Selected</string>
    <string name="message_dialog_no_checkbox">Please select an orientation</string>

    <!-- ImageDetails Fragment -->
    <string name="title_image_details_fragment">Image Details</string>
    <string name="title_created_at">Send at</string>
    <string name="title_updated_at">Treated at</string>
    <string name="title_treaty">Treated</string>
    <string name="title_filters">Filters</string>
    <string name="btn_download_image">Download Image</string>
    <string name="menu_details">Details</string>

    <!-- UntreatedList Fragment -->
    <string name="title_untreated_list_fragment">Untreated Images</string>
    <string name="txt_empty_list_untreated">No Image to Process</string>

    <!-- Profile Fragment -->
    <string name="title_profile">Profile</string>
    <string name="title_name">Name</string>
    <string name="title_email">Email</string>

    <!-- Settings Fragment -->
    <string name="title_settings">Settings</string>

    <!-- TreatedList Fragment -->
    <string name="title_treated_list_fragment">Treated Images</string>
    <string name="txt_empty_list_treated">No Image Treated</string>

    <!-- About Fragment -->
    <string name="title_about_fragment">About</string>
    <string name="about_version">%s V%s</string>

    <!-- ProgressBar -->
    <string name="txt_please_wait">Please Wait …</string>
</resources>
