<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="6dp">

    <LinearLayout
        android:id="@+id/linear_layout_details"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true"
        android:padding="8dp"
        android:background="@drawable/transform_menu_effect">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/white"
            android:src="@drawable/ic_info_black_24dp" />

        <TextView
            android:id="@+id/txt_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/menu_details" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_66"
        app:layout_constraintStart_toStartOf="@+id/guideline_33"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            android:backgroundTint="@android:color/holo_red_dark">

            <TextView
                android:id="@+id/badge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="10sp" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linear_layout_list_filter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:background="@drawable/transform_menu_effect">

            <ImageView
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/white"
                android:src="@drawable/ic_filter_list_black_24dp" />

            <TextView
                android:id="@+id/txt_filter_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/menu_filter_list" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linear_layout_download"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_66"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:background="@drawable/transform_menu_effect">

        <ImageView
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/white"
            android:src="@drawable/ic_file_download_black_24dp" />

        <TextView
            android:id="@+id/txt_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_download_image" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66"/>

</androidx.constraintlayout.widget.ConstraintLayout>

