<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.esgi.picturization.ui.home.start.StartViewModel" />
    </data>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.start.StartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/image_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/list_image_item" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_btn_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_add_white_24dp"
            app:fabSize="auto"
            app:elevation="6dp"
            app:backgroundTint="@color/colorPrimary"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_btn_take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:src="@drawable/ic_add_a_photo_white_24dp"
            android:visibility="invisible"
            app:backgroundTint="@color/colorPrimaryLight"
            app:layout_constraintBottom_toTopOf="@+id/container_layout"
            app:layout_constraintEnd_toEndOf="parent"
            android:focusable="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_btn_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:src="@drawable/ic_gallery_white_24dp"
            android:visibility="invisible"
            app:backgroundTint="@color/colorPrimaryLight"
            app:layout_constraintBottom_toTopOf="@+id/floating_btn_take_picture"
            app:layout_constraintEnd_toEndOf="parent"
            android:focusable="true" />

        <TextView
            android:id="@+id/floating_txt_take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/fab_text_background"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/txt_fab_take_picture"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/floating_btn_take_picture"
            app:layout_constraintEnd_toStartOf="@+id/floating_btn_take_picture"
            app:layout_constraintTop_toTopOf="@+id/floating_btn_take_picture" />

        <TextView
            android:id="@+id/floating_txt_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/fab_text_background"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/txt_fab_gallery"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/floating_btn_gallery"
            app:layout_constraintEnd_toStartOf="@+id/floating_btn_gallery"
            app:layout_constraintTop_toTopOf="@+id/floating_btn_gallery" />

        <TextView
            android:id="@+id/txt_empty_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_empty_list"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>